--- a/axum_sample/Cargo.toml
+++ b/axum_sample/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "actix_web_sample"
-path = "src/libs.rs"
+name = "axum_sample"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4"
+axum = "0.7.3"
+tokio = { version = "1.12.0", features = ["full"] }
 serde_json = "1"
