Add Rocket sample

--- a/rocket_sample/Dockerfile
+++ b/rocket_sample/Dockerfile
@@ -1,15 +1,15 @@
 FROM rust:latest
 
-WORKDIR /usr/src/axum_sample
+WORKDIR /usr/src/rocket_sample
 
 COPY Cargo.toml Cargo.lock ./
 RUN mkdir src && \
     echo "fn main() {}" > src/main.rs && \
     cargo build --release && \
-    rm -f target/release/deps/axum_sample
+    rm -f target/release/deps/rocket_sample
 
 COPY src ./src
 
 RUN cargo install --path .
 
-CMD ["axum_sample"]
+CMD ["rocket_sample"]
