--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,17 @@ services:
     ports:
       - "8081:8081"
 
+  rocket:
+    build:
+      context: rocket_sample
+      dockerfile: Dockerfile
+    volumes:
+      - ./rocket_sample:/usr/src/rocket_sample
+      - cargo-cache:/usr/local/cargo/registry
+    command: ["/usr/local/cargo/bin/rocket_sample"]
+    # command: ["cargo run"]
+    ports:
+      - "8082:8082"
+
 volumes:
   cargo-cache:
