--- a/warp_sample/Cargo.toml
+++ b/warp_sample/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "poem_sample"
+name = "warp_sample"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-poem = "2.0.0"
-tokio = { version = "1", features = ["full"] }
-serde = "1"
